# churning_mode

./: .gitignore  CMakeLists.txt  churn.cxx  custom_laplace_inverter.cxx  extra_derivs.cxx  header.hxx  init.cxx  readme.md  rhs.cxx
data/: BOUT.inp
notebooks/: analysis.py  plot_output.ipynb  plot_output_xz.ipynb
src/: boundary_conditions.cxx  conduction_models.cxx  custom_laplace_inverter.cxx  extra_derivs.cxx  header.hxx  init.cxx  rhs.cxx
