cmake_minimum_required(VERSION 3.13)
project(churn LANGUAGES CXX)
set(bout++_DIR, "/Users/power8/Documents/01_code/04_bout/build-bout")
find_package(bout++ REQUIRED)
add_executable(churn src/header.hxx src/init.cxx src/rhs.cxx src/custom_laplace_inverter.cxx src/conduction_models.cxx src/extra_derivs.cxx src/boundary_conditions.cxx)
target_link_libraries(churn PRIVATE bout++::bout++)
